Punto de control

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Portafolio2</title>
 </head>
-<body style="margin: 0; background-color: #11141BFF">
+<body style="margin: 0; background-color: #11141BFF;">
 <div id="root"></div>
 <script type="module" src="src/index.jsx"></script>
 </body>
