prepere style presentation

--- a/index.html
+++ b/index.html
@@ -1,13 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Personal portfolio">
-    <title>Portfolio</title>
-  </head>
-  <body>
-    <div id="main"></div>
-    <script src="./src/main.tsx" type="module"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="personal portfolio by marlonocampo">
+  <title>Marlon Ocampo</title>
+</head>
+
+<body>
+  <style>
+    ::-webkit-scrollbar {
+      width: 7px;
+      background-color: #122138;
+    }
+
+    ::-webkit-scrollbar-thumb {
+      border-radius: 20px;
+      background-color: #305082;
+    }
+  </style>
+  <div id="main"></div>
+  <script src="./src/main.tsx" type="module"></script>
+</body>
+
 </html>
