--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
       border-radius: 20px;
       background-color: #305082;
     }
+    html{
+      min-width: 300px;
+      overflow: scroll;
+    }
   </style>
   <div id="main"></div>
   <script src="./src/main.tsx" type="module"></script>
