--- a/index.html
+++ b/index.html
@@ -11,18 +11,18 @@
 <body>
   <style>
     ::-webkit-scrollbar {
-      width: 7px;
+      width: 5px;
       height: 7px;
-      background-color: #122138;
+      background-color: #c6d5ee;
     }
 
     ::-webkit-scrollbar-thumb {
       border-radius: 20px;
-      background-color: #305082;
+      background-color: #566786;
     }
     html{
       min-width: 300px;
-      overflow: scroll;
+      overflow: auto;
     }
   </style>
   <div id="main"></div>
