--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="personal portfolio by marlonocampo">
+  <link rel="icon" type="image/svg+xml" href="/src/assets/icons/favicon/favicon.svg">
   <title>Marlon Ocampo</title>
 </head>
 
