Update meta tags in index.html

--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="personal portfolio by marlonocampo">
+  <meta name="title" content="Marlon Ocampo - marlonocampo" />
+  <meta name="description" content="Portfaolio Personal De marlonocampo">
+  <meta name="image" content="/src/assets/images/profileLight.webp">
+
   <link rel="icon" type="image/svg+xml" href="/src/assets/icons/favicon/favicon.svg">
   <title>Marlon Ocampo</title>
 </head>
