update link image preview

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="title" content="Marlon Ocampo - marlonocampo" />
   <meta name="description" content="Portafolio Personal De marlonocampo">
-  <meta name="image" content="/src/assets/profileDark.webp"> <!-- Link image in host/server deployed-->
+  <meta name="image" content="/imagePreview.webp"> <!-- Link image in host/server deployed-->
 
   <link rel="icon" type="image/svg+xml" href="/src/assets/icons/favicon/favicon.svg">
   <title>Marlon Ocampo</title>
