--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="title" content="Marlon Ocampo - marlonocampo" />
-  <meta name="description" content="Portafolio Personal De marlonocampo">
-  <meta name="image" content="/imagePreview.webp"> <!-- Link image in host/server deployed-->
+  <meta property="og:url" content="https://marlonocampo.com">
+  <meta name="og:title" content="Marlon Ocampo - marlonocampo" />
+  <meta name="og:description" content="Portafolio Personal De marlonocampo">
+  <meta name="og:image" content="/src/assets/images/profileDark.webp">
 
-  <link rel="icon" type="image/svg+xml" href="/src/assets/icons/favicon/favicon.svg">
+  <link rel="shortcut icon" type="image/svg+xml" href="/src/assets/icons/favicon/favicon.svg">
   <title>Marlon Ocampo</title>
 </head>
 
