--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="og:description" content="Portafolio Personal De marlonocampo">
   <meta name="og:image" content="/src/assets/images/profileDark.webp">
 
-  <link rel="shortcut icon" type="image/svg+xml" href="/src/assets/icons/favicon/favicon.svg">
+  <link rel="shortcut icon" type="image/x-icon" href="/src/assets/icons/favicon/moico.ico">
   <title>Marlon Ocampo</title>
 </head>
 
