--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   <meta property="og:url" content="https://marlonocampo.com">
   <meta name="og:title" content="Marlon Ocampo - marlonocampo" />
   <meta name="og:description" content="Portafolio Personal De marlonocampo">
-  <meta name="og:image" content="/src/assets/images/profileDark.webp">
+  <link rel="shortcut icon" href="/src/assets/images/profileDark.webp">
 
-  <link rel="shortcut icon" type="image/x-icon" href="/src/assets/icons/favicon/moico.ico">
+  <link rel="icon" href="/src/assets/icons/favicon/favicon.ico">
   <title>Marlon Ocampo</title>
 </head>
 
