update meta description

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta property="og:url" content="https://marlonocampo.com">
   <meta name="og:title" content="Marlon Ocampo - marlonocampo" />
-  <meta name="og:description" content="Portafolio Personal De marlonocampo">
+  <meta name="og:description" content="Portafolio Personal de marlonocampo">
+  <meta name="description" content="Portafolio Personal de marlonocampo - 2024 ">
   <link rel="shortcut icon" href="/src/assets/images/profileDark.webp">
-
   <link rel="icon" href="/src/assets/icons/favicon/favicon.ico">
   <title>Marlon Ocampo</title>
 </head>
