Revert "change year copyrigth"
This reverts commit 4587170598930aeeca7209c11152905705039b0e.

--- a/index.html
+++ b/index.html
@@ -1,12 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" style="::-webkit-scrollbar-track {
-    background: #ea728f;
-  }, .scrollbar-custom::-webkit-scrollbar-thumb {
-    background-color: #75095d;
-    border-radius: 20px;
-  }, .scrollbar-custom::-webkit-scrollbar {
-    width: 20px;
-  }">
+<html lang="en">
 
 <head>
   <meta charset="UTF-8" />
@@ -14,7 +7,7 @@
   <meta property="og:url" content="https://marlonocampo.com">
   <meta name="og:title" content="Marlon Ocampo - marlonocampo" />
   <meta name="og:description" content="Portafolio Personal de marlonocampo">
-  <meta name="description" content="Portafolio Personal de marlonocampo - 2025 ">
+  <meta name="description" content="Portafolio Personal de marlonocampo - 2024 ">
   <link rel="shortcut icon" href="/src/assets/images/profileDark.webp">
   <link rel="icon" href="/src/assets/icons/favicon/favicon.ico">
   <title>Marlon Ocampo</title>
